# MANPASIK-ONE

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  KNOWN_ISSUES.md  Makefile  QUALITY_GATES.md  README.md  build_test.sh  docker-compose.yml  fix_flutter_recursive_retry.sh  fix_flutter_sdk.sh  fix_proto.sh  fix_proto_dot.sh  fix_proto_final.sh  fix_proto_methods.py  fix_proto_pc_named.sh  fix_proto_type_args.sh  go.work  install_flutter.sh  run_app.sh
.cursor/rules/: frontend.mdc  go-backend.mdc  infrastructure.mdc  manpasik-project.mdc  rust-core.mdc  security-compliance.mdc  work-logging.mdc
.github/workflows/: _gen.py  _write_cd.py  cd.yml  ci.yml
backend/: Dockerfile  go.mod  go.sum
backend/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_add_performance_indexes.down.sql  000002_add_performance_indexes.up.sql
docs/: AI_COLLABORATION.md  COMMON_RULES.md  DESIGN_SYSTEM.md  HOLOBODY_V6.2_REPORT.md  HOLOGRAM_ENHANCEMENT_PLAN.md  PROCESS_LOG.md  PROJECT_REPORT_2026_02_19.md  SYSTEM_COMPLETENESS_AUDIT_2026_02_19.md  SYSTEM_GAP_ANALYSIS_2026_02_19.md  UI_AND_HOLOGRAM_OVERHAUL_PLAN.md  UI_OPTIMIZATION_PLAN_2026_02_19.md  ULTIMATE_MEDICAL_DASHBOARD_PLAN.md  claude-task-analysis.md  dashboard_enhancement_2026_02_18.md  development-philosophy.md  implementation-patterns.md  plan-original-vs-current-and-development-proposal.md  system-plan-verification.md
docs/api/: REST-API-v1.0.md
docs/audit/: system-completeness-audit-v5.0.md  system-completeness-audit-v6.0.md
docs/compliance/: compliance-gap-resolution.md  data-protection-policy.md  dpia-template.md  iec62304-sad.md  iec62304-sdp.md  iec62304-srs.md  iso14971-fmea.md  iso14971-pha.md  iso14971-risk-management-plan.md  predicate-device-research.md  regulatory-compliance-checklist.md  software-safety-classification.md  technical-file-structure.md  vnv-master-plan.md
docs/deployment/: docker-guide.md
docs/design/: BRAND_GUIDELINE.md  DESIGN_GENERATION_STRATEGY.md  ECOSYSTEM_DESIGN_DETAILED_SPEC.md  ECOSYSTEM_DESIGN_MASTER_PLAN.md  STYLE_GUIDE_CODE.md
docs/plan/: AGENT-PROMPTS.md  AGENT-WORK-DISTRIBUTION-2026-02-12.md  AI-ASSISTANT-MASTER-SPEC.md  B3-toss-pg-integration.md  CARTRIDGE-STORE-SDK-SPEC.md  COMPREHENSIVE-IMPLEMENTATION-MASTERPLAN-v2.0.md  DETAILED-IMPLEMENTATION-PLAN.md  (+43 more)
rust-core/: Cargo.toml
rust-core/flutter-bridge/: Cargo.toml
rust-core/flutter-bridge/src/: lib.rs
rust-core/manpasik-engine/: Cargo.toml
rust-core/manpasik-engine/benches/: differential_measurement.rs
rust-core/manpasik-engine/src/: lib.rs
rust-core/manpasik-engine/src/ai/: mod.rs
rust-core/manpasik-engine/src/ble/: mod.rs
rust-core/manpasik-engine/src/crypto/: mod.rs
rust-core/manpasik-engine/src/differential/: mod.rs
rust-core/manpasik-engine/src/dsp/: mod.rs
rust-core/manpasik-engine/src/fingerprint/: mod.rs
rust-core/manpasik-engine/src/nfc/: mod.rs
rust-core/manpasik-engine/src/sync/: mod.rs
tests/: go.mod
tools/: error_log.txt  generate_body_data.py  generate_mesh_data.py  generate_organic_body.py  generate_organic_body_v14.py
(+733 files in other folders)
