[workspace]
resolver = "2"
members = [
    "manpasik-engine",
    "flutter-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ManPaSik Team <dev@manpasik.com>"]
license = "Proprietary"
repository = "https://github.com/manpasik/manpasik"

[workspace.dependencies]
# 비동기 런타임
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# BLE
btleplug = "0.11"

# DSP
rustfft = "6.2"
dasp = "0.11"
ndarray = "0.15"

# 암호화
ring = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"

# AI/ML
tflitec = "0.7"
ort = "2.0"  # ONNX Runtime

# 로깅
tracing = "0.1"
tracing-subscriber = "0.3"

# 에러 핸들링
thiserror = "1.0"
anyhow = "1.0"

# 테스트
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
